--- a/WikiParez/Views/Game/Parezle/Parezle.cshtml
+++ b/WikiParez/Views/Game/Parezle/Parezle.cshtml
@@ -191,8 +191,10 @@
     var turned = false;
     var hintenabled = false;
     var path = @Html.Raw(Json.Serialize(ViewBag.ShortestPath));
+    var finished = false;
     
     function undo() {
+        if (finished) return;
         var board = document.getElementById('guessed');
         if (turned) board = document.getElementById('guessedend');
         if (board.children.length > 1) {
@@ -216,6 +218,7 @@
     }
 
     function turn() {
+        if (finished) return;
         turned = !turned;
         if (!turned) alreadyguessed = [guesses[guesses.length - 1]];
         if (turned) alreadyguessed = [guessesfromend[guessesfromend.length - 1]];
@@ -257,7 +260,7 @@
     }
 
     function hint() {
-        if (hintenabled == true){
+        if (hintenabled || finished){
             return;
         }
         hintenabled = true;
@@ -268,6 +271,7 @@
     }
 
     function guess() {
+        if (finished) return;
         var arg = selectedKey;
         if (!(arg in rooms)) {
             return;
@@ -312,7 +316,8 @@
     }
     
     function win(){
-        var score = Math.round(path.length/(guesses.length+1+mistakes*0.5+hints*2.5+undos*0.5+turns*4)*100);
+        finished = true;
+        var score = Math.round(path.length/(guesses.length+guessesfromend.length-1+mistakes*0.5+hints*2.5+undos*0.5+turns*4)*100);
         var correctsolutionlen = path.length - 1;
 
         var floatingDiv = document.createElement('div');
@@ -351,7 +356,8 @@
         var guessesLabel = document.createElement('div');
         guessesLabel.style.fontSize = '2rem';
         guessesLabel.style.marginTop = '30px';
-        guessesLabel.innerText = '📝' + guesses.length + '/' + correctsolutionlen + "\t" + '❌' + mistakes + "\t" + '❓' + hints + "\t" + '↩️' + undos + "\t" + '🔄' + turns;
+        var numberofguesses = guesses.length + guessesfromend.length - 1;
+        guessesLabel.innerText = '📝' + numberofguesses + '/' + correctsolutionlen + "\t" + '❌' + mistakes + "\t" + '❓' + hints + "\t" + '↩️' + undos + "\t" + '🔄' + turns;
         floatingDiv.appendChild(guessesLabel);
 
         floatingDiv.appendChild(document.createElement('br'));
@@ -391,7 +397,7 @@
         copyBtn.style.borderRadius = '8px';
         copyBtn.style.cursor = 'pointer';
         copyBtn.onclick = function() {
-            navigator.clipboard.writeText("Kroky: ||" + guesses.length + "||\nChyby: ||" + mistakes + "||\nNápovědy: ||" + hints + "||\nZpět: ||" + undos + "||\nOtočení: ||" + turns + "||\nCesta: ||" + yourguesses + "||\nSkóre: ||" + score + "||\nPlay on: https://parezwiki.onrender.com/Game/Parezle");
+            navigator.clipboard.writeText("Kroky: ||" + numberofguesses + "||\nChyby: ||" + mistakes + "||\nNápovědy: ||" + hints + "||\nZpět: ||" + undos + "||\nOtočení: ||" + turns + "||\nCesta: ||" + yourguesses + "||\nSkóre: ||" + score + "||\nPlay on: https://parezwiki.onrender.com/Game/Parezle");
         };
         floatingDiv.appendChild(document.createElement('br'));
         floatingDiv.appendChild(copyBtn);
