--- a/WikiParez/Views/Home/New.cshtml
+++ b/WikiParez/Views/Home/New.cshtml
@@ -6,6 +6,13 @@
     <h1 class="display-4">Vítejte na Pařez Wiki!</h1>
     <h3>Nejnovější místnosti: </h3>
     <ul>
+        <li>#469 - 12/07/25 <a href="/mi_rajce">Rajče</a></li>
+        <li>#468 - 12/07/25 <a href="/mi_dvojcata">Dvojčata</a></li>
+        <li>#467 - 12/07/25 <a href="/mi_pecka">Pecka</a></li>
+        <li>#466 - 12/07/25 <a href="/mi_tresen">Třešeň</a></li>
+        <li>#465 - 12/07/25 <a href="/mi_zazemi">Zázemí</a></li>
+        <li>#464 - 12/07/25 <a href="/mi_parket">Parket</a></li>
+        <li>#463 - 12/07/25 <a href="/mi_pulmesic">Půlměsíc</a></li>
         <li>#462 - 07/07/25 <a href="/mi_silhanek">Šilhánek</a></li>
         <li>#461 - 07/07/25 <a href="/mi_wc_mesita">WC Mešita</a></li>
         <li>#460 - 07/07/25 <a href="/mi_bumblebee">Bumblebee</a></li>
