couple renaming and 2 new rooms

--- a/WikiParez/Views/Home/New.cshtml
+++ b/WikiParez/Views/Home/New.cshtml
@@ -6,6 +6,8 @@
     <h1 class="display-4">Vítejte na Pařez Wiki!</h1>
     <h3>Nejnovější místnosti: </h3>
     <ul>
+        <li>#471 - 18/07/25 <a href="/mi_motor">Motor</a></li>
+        <li>#470 - 18/07/25 <a href="/mi_pavilon">Pavilon</a></li>
         <li>#469 - 12/07/25 <a href="/mi_rajce">Rajče</a></li>
         <li>#468 - 12/07/25 <a href="/mi_dvojcata">Dvojčata</a></li>
         <li>#467 - 12/07/25 <a href="/mi_pecka">Pecka</a></li>
