unikove schodiste zitra to bude pecka haha

--- a/WikiParez/Views/Home/New.cshtml
+++ b/WikiParez/Views/Home/New.cshtml
@@ -6,6 +6,9 @@
     <h1 class="display-4">Vítejte na Pařez Wiki!</h1>
     <h3>Nejnovější místnosti: </h3>
     <ul>
+        <li>#474 - 19/07/25 <a href="/mi_podkrovi">Podkroví</a></li>
+        <li>#473 - 19/07/25 <a href="/mi_bazar">Bazar</a></li>
+        <li>#472 - 18/07/25 <a href="/mi_orisek">Oříšek</a></li>
         <li>#471 - 18/07/25 <a href="/mi_motor">Motor</a></li>
         <li>#470 - 18/07/25 <a href="/mi_pavilon">Pavilon</a></li>
         <li>#469 - 12/07/25 <a href="/mi_rajce">Rajče</a></li>
