update new rooms

--- a/WikiParez/Views/Home/New.cshtml
+++ b/WikiParez/Views/Home/New.cshtml
@@ -6,6 +6,23 @@
     <h1 class="display-4">Vítejte na Pařez Wiki!</h1>
     <h3>Nejnovější místnosti: </h3>
     <ul>
+        <li>#491 - 20/07/25 <a href="mi_housle">Housle</a></li>
+        <li>#490 - 20/07/25 <a href="mi_harmonika">Harmonika</a></li>
+        <li>#489 - 20/07/25 <a href="mi_harfa">Harfa</a></li>
+        <li>#488 - 20/07/25 <a href="mi_hydrant">Hydrant</a></li>
+        <li>#487 - 20/07/25 <a href="mi_holinky">Holínky</a></li>
+        <li>#486 - 20/07/25 <a href="mi_hrob">Hrob</a></li>
+        <li>#485 - 20/07/25 <a href="mi_horeniste">Hořeniště</a></li>
+        <li>#484 - 20/07/25 <a href="mi_hrozen">Hrozen</a></li>
+        <li>#483 - 20/07/25 <a href="mi_halucinace">Halucinace</a></li>
+        <li>#482 - 20/07/25 <a href="mi_hmla">Hmla</a></li>
+        <li>#481 - 20/07/25 <a href="mi_hyena">Hyena</a></li>
+        <li>#480 - 20/07/25 <a href="mi_hieroglyf">Hieroglyf</a></li>
+        <li>#479 - 20/07/25 <a href="mi_horizont">Horizont</a></li>
+        <li>#478 - 20/07/25 <a href="mi_holubnik">Holubník</a></li>
+        <li>#477 - 20/07/25 <a href="mi_hriva">Hříva</a></li>
+        <li>#476 - 20/07/25 <a href="mi_hadice">Hadice</a></li>
+        <li>#475 - 20/07/25 <a href="mi_hospoda">Hospoda</a></li>
         <li>#474 - 19/07/25 <a href="/mi_podkrovi">Podkroví</a></li>
         <li>#473 - 19/07/25 <a href="/mi_bazar">Bazar</a></li>
         <li>#472 - 18/07/25 <a href="/mi_orisek">Oříšek</a></li>
