--- a/WikiParez/Views/Wiki/Other.cshtml
+++ b/WikiParez/Views/Wiki/Other.cshtml
@@ -3,9 +3,21 @@
         <button type="submit" class="btn btn-secondary btn-lg" style="background-color: rgb(151, 219, 61)">Nové místnosti</button>
     </form>
     <form method="get" action="/List/List">
-        <button type="submit" class="btn btn-primary btn-lg" style="background-color: rgb(65, 165, 223)">Seznam místností</button>
+        <button type="submit" class="btn btn-primary btn-lg" style="background-color: rgb(65, 165, 223)">Seznam stránek</button>
     </form>
     <form method="get" action="/Home/Ideas">
         <button type="submit" class="btn btn-primary btn-lg" style="background-color: rgb(199, 54, 54)">Nápady na názvy</button>
+    </form>
+    <form method="get" action="/List/Rooms">
+        <button type="submit" class="btn btn-primary btn-lg" style="background-color: rgb(214, 218, 25)">Seznam místností</button>
+    </form>
+    <form method="get" action="/List/Blocks">
+        <button type="submit" class="btn btn-primary btn-lg" style="background-color: rgb(236, 72, 241)">Seznam bloků</button>
+    </form>
+    <form method="get" action="/List/Okrseks">
+        <button type="submit" class="btn btn-primary btn-lg" style="background-color: rgb(43, 158, 224)">Seznam okrsků</button>
+    </form>
+    <form method="get" action="/List/Ctvrts">
+        <button type="submit" class="btn btn-primary btn-lg" style="background-color: rgb(218, 167, 25)">Seznam čtvrtí</button>
     </form>
 </div>
