--- a/WikiParez/Views/Wiki/Games.cshtml
+++ b/WikiParez/Views/Wiki/Games.cshtml
@@ -5,4 +5,7 @@
     <form method="get" action="/Game/ParezleMenu">
         <button type="submit" class="btn btn-primary btn-lg" style="background-color: rgb(153, 87, 230)">PAŘEZLE</button>
     </form>
+    <form method="get" action="/Game/PatternleMenu">
+        <button type="submit" class="btn btn-primary btn-lg" style="background-color: rgb(43, 201, 201)">PATTERNLE</button>
+    </form>
 </div>
