--- a/WikiParez/Views/Home/New.cshtml
+++ b/WikiParez/Views/Home/New.cshtml
@@ -6,6 +6,7 @@
     <h1 class="display-4">Vítejte na Pařez Wiki!</h1>
     <h3>Nejnovější místnosti: </h3>
     <ul>
+        <li>#492 - 24/07/25 <a href="mi_konzole">Konzole</a></li>
         <li>#491 - 20/07/25 <a href="mi_housle">Housle</a></li>
         <li>#490 - 20/07/25 <a href="mi_harmonika">Harmonika</a></li>
         <li>#489 - 20/07/25 <a href="mi_harfa">Harfa</a></li>
