--- a/WikiParez/Views/Shared/_Layout.cshtml
+++ b/WikiParez/Views/Shared/_Layout.cshtml
@@ -57,6 +57,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Wiki" asp-action="Other">Ostatní</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Map" asp-action="Elevators">Mapa Výtahů</a>
+                        </li>
                     </ul>
                     <form class="d-flex" asp-controller="Wiki" asp-action="Search" method="get">
                         <input class="form-control me-2" type="search" name="query" placeholder="Hledat stránku..." aria-label="Search">
