fixes and new splash texts by marie hebertova

--- a/WikiParez/Views/Home/New.cshtml
+++ b/WikiParez/Views/Home/New.cshtml
@@ -6,6 +6,8 @@
     <h1 class="display-4">Vítejte na Pařez Wiki!</h1>
     <h3>Nejnovější místnosti: </h3>
     <ul>
+        <li>#495 - 28/07/25 <a href="mi_trh">Trh</a></li>
+        <li>#494 - 28/07/25 <a href="mi_padaci_most">Padací Most</a></li>
         <li>#493 - 26/07/25 <a href="mi_meda">Méďa</a></li>
         <li>#492 - 24/07/25 <a href="mi_konzole">Konzole</a></li>
         <li>#491 - 20/07/25 <a href="mi_housle">Housle</a></li>
